# array_pool

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  pool.rs  raw_buffer.rs  vec.rs
