[package]
name = "array_pool"
version = "0.1.0"
edition = "2021"
authors = ["Nguyễn Khánh Nam <cycastic@gmail.com>"]
description = "A simple, tiered caching array pool implementation in Rust."
license = "MIT"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thread_local = "1.1.8"

[dev-dependencies]
lazy_static = "1.4.0"
